--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<h3>March 2022</h3>
 	<ol>
 		<li><a target="_blank" href="d14demo/index.html">Mocha samples</a>This page has an example of code that works in the browser.</li>
-		<li><a target="_blank" href="d14arrays/index.html">Arrays </a></li>
-		<li><a target="_blank" href="w1d5Homework/index.html">Function expressions </a></li>
+		<li><a target="_blank" href="d14arrays/index.html"><strong>Arrays </strong></a></li>
+		<li><a target="_blank" href="w1d5Homework/index.html"><strong>Function expressions </strong> </a></li>
 		<li><a target="_blank" href="d21objects/index.html">Objects </a></li>
 		<li><a target="_blank" href="d22methods/index.html">Methods and Constructor Functions</a></li>
 		<li><a target="_blank" href="d23dataTypes/index.html">Data Types</a></li>
