--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<li><a target="_blank" href="d14arrays/index.html"><strong>Arrays </strong></a></li>
 		<li><a target="_blank" href="w1d5Homework/index.html"><strong>Function expressions </strong> </a></li>
 		<li><a target="_blank" href="w2d1Homework/index.html"><strong>Objects</strong> </a></li>
-		<li><a target="_blank" href="d22methods/index.html">Methods and Constructor Functions</a></li>
+		<li><a target="_blank" href="w2d2Homework/index.html"><strong>Methods and Constructor Functions</strong></a></li>
 		<li><a target="_blank" href="d23dataTypes/index.html">Data Types</a></li>
 		<li><a target="_blank" href="d24arrayMethods/index.html">Array Methods</a></li>
 		<li><a target="_blank" href="d25destructure/index.html">Destructuring</a></li>
