--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<li><a target="_blank" href="w2d2Homework/index.html"><strong>Methods and Constructor Functions</strong></a></li>
 		<li><a target="_blank" href="w2d3Homework/index.html"><strong>Data Types</strong></a></li>
 		<li><a target="_blank" href="w2d4Homework/index.html"><strong>Array Methods</strong></a></li>
-		<li><a target="_blank" href="d25destructure/index.html">Destructuring</a></li>
+		<li><a target="_blank" href="w2d5Homework/index.html"><strong>Practice test</strong></a></li>
 		<li><a target="_blank" href="d31recursion/index.html">Recursion</a></li>
 		<li><a target="_blank" href="d32recursiveStructures/index.html">Recursion Practice</a></li>
 		<li><a target="_blank" href="d33closures/index.html">Closures</a></li>
