--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<li><a target="_blank" href="w2d3Homework/index.html"><strong>Data Types</strong></a></li>
 		<li><a target="_blank" href="w2d4Homework/index.html"><strong>Array Methods</strong></a></li>
 		<li><a target="_blank" href="w2d5Homework/index.html"><strong>Practice test</strong></a></li>
-		<li><a target="_blank" href="d31recursion/index.html">Recursion</a></li>
+		<li><a target="_blank" href="w3d1Homework/index.html"><strong> Destructure </strong></a></li>
 		<li><a target="_blank" href="d32recursiveStructures/index.html">Recursion Practice</a></li>
 		<li><a target="_blank" href="d33closures/index.html">Closures</a></li>
 		<li><a target="_blank" href="d34scheduledCallbacks/index.html">Scheduled Callbacks</a></li>
