--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<li><a target="_blank" href="w2d4Homework/index.html"><strong>Array Methods</strong></a></li>
 		<li><a target="_blank" href="w2d5Homework/index.html"><strong>Practice test</strong></a></li>
 		<li><a target="_blank" href="w3d1Homework/index.html"><strong> Destructure </strong></a></li>
-		<li><a target="_blank" href="d32recursiveStructures/index.html">Recursion Practice</a></li>
+		<li><a target="_blank" href="w3d2Homework/index.html"><strong> Scheduled Callbacks</strong></a></li>
 		<li><a target="_blank" href="d33closures/index.html">Closures</a></li>
 		<li><a target="_blank" href="d34scheduledCallbacks/index.html">Scheduled Callbacks</a></li>
 		<li><a target="_blank" href="d35callContext/index.html">Call Context</a></li>
