--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<li><a target="_blank" href="w2d5Homework/index.html"><strong>Practice test</strong></a></li>
 		<li><a target="_blank" href="w3d1Homework/index.html"><strong> Destructure </strong></a></li>
 		<li><a target="_blank" href="w3d2Homework/index.html"><strong> Scheduled Callbacks</strong></a></li>
-		<li><a target="_blank" href="d33closures/index.html">Closures</a></li>
+		<li><a target="_blank" href="w3d3Homework/index.html"><strong>Call Context</strong></a></li>
 		<li><a target="_blank" href="d34scheduledCallbacks/index.html">Scheduled Callbacks</a></li>
 		<li><a target="_blank" href="d35callContext/index.html">Call Context</a></li>
 		<li><a target="_blank" href="d41inheritance/index.html">Inheritance</a></li>
