--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<li><a target="_blank" href="w3d1Homework/index.html"><strong> Destructure </strong></a></li>
 		<li><a target="_blank" href="w3d2Homework/index.html"><strong> Scheduled Callbacks</strong></a></li>
 		<li><a target="_blank" href="w3d3Homework/index.html"><strong>Call Context</strong></a></li>
-		<li><a target="_blank" href="d34scheduledCallbacks/index.html">Scheduled Callbacks</a></li>
+		<li><a target="_blank" href="w3d4Homework/index.html"><strong>Closure</strong></a></li>
 		<li><a target="_blank" href="d35callContext/index.html">Call Context</a></li>
 		<li><a target="_blank" href="d41inheritance/index.html">Inheritance</a></li>
 		<li><a target="_blank" href="d42class/index.html">Classes</a></li>
