--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<li><a target="_blank" href="w3d3Homework/index.html"><strong>Call Context</strong></a></li>
 		<li><a target="_blank" href="w3d4Homework/index.html"><strong>Closure</strong></a></li>
 		<li><a target="_blank" href="w3d5Homework/index.html"><strong>Advanced functions integration</strong> </a></li>
-		<li><a target="_blank" href="d41inheritance/index.html">Inheritance</a></li>
+		<li><a target="_blank" href="w3d6Homework/index.html"><strong>Inheritance</strong></a></li>
 		<li><a target="_blank" href="d42class/index.html">Classes</a></li>
 	</ol>
 </body>
