--- a/CS315.html
+++ b/CS315.html
@@ -1,14 +1,14 @@
 <html>
 <head>
-	<title>CS305 labs</title>
+	<title>CS315 labs</title>
 </head>
 <body>
-	<h1>CS305 Object and Functional Programming in JavaScript</h1>
+	<h1>CS315 Web Application Programming in JavaScript</h1>
 	<h2>Labs</h2>
-	<h3>March 2022</h3>
+	<h3>April 2022</h3>
 	<ol>
 		<li><a target="_blank" href="CS305/d14demo/index.html">Mocha samples</a>This page has an example of code that works in the browser.</li>
-		<li><a target="_blank" href="CS305/d14arrays/index.html"><strong>Arrays </strong></a></li>
+		<!--<li><a target="_blank" href="CS305/d14arrays/index.html"><strong>Arrays </strong></a></li>
 		<li><a target="_blank" href="CS305/w1d5Homework/index.html"><strong>Function expressions </strong> </a></li>
 		<li><a target="_blank" href="CS305/w2d1Homework/index.html"><strong>Objects</strong> </a></li>
 		<li><a target="_blank" href="CS305/w2d2Homework/index.html"><strong>Methods and Constructor Functions</strong></a></li>
@@ -21,7 +21,7 @@
 		<li><a target="_blank" href="CS305/w3d4Homework/index.html"><strong>Closure</strong></a></li>
 		<li><a target="_blank" href="CS305/w3d5Homework/index.html"><strong>Advanced functions integration</strong> </a></li>
 		<li><a target="_blank" href="CS305/w3d6Homework/index.html"><strong>Inheritance</strong></a></li>
-		<li><a target="_blank" href="CS305/projectcopy/index.html"><strong>Bank Accounts</strong></a></li>
+		<li><a target="_blank" href="CS305/projectcopy/index.html"><strong>Bank Accounts</strong></a></li> -->
 	</ol>
 </body>
 </html>
