--- a/CS315.html
+++ b/CS315.html
@@ -7,7 +7,7 @@
 	<h2>Labs</h2>
 	<h3>April 2022</h3>
 	<ol>
-		<li><a target="_blank" href="CS305/d14demo/index.html">Mocha samples</a>This page has an example of code that works in the browser.</li>
+		<li><a target="_blank" href="CS315/w1d1Homework/myStory.html">About me and my business idea</a> w1d1Homework</li>
 		<!--<li><a target="_blank" href="CS305/d14arrays/index.html"><strong>Arrays </strong></a></li>
 		<li><a target="_blank" href="CS305/w1d5Homework/index.html"><strong>Function expressions </strong> </a></li>
 		<li><a target="_blank" href="CS305/w2d1Homework/index.html"><strong>Objects</strong> </a></li>
