--- a/CS315/w1d1Homework/business.html
+++ b/CS315/w1d1Homework/business.html
@@ -6,6 +6,7 @@
     <h4>The fastest growing tree in the world</h4>
 </head>
 <body>
+    <img src="../../img/foto22.jpeg" alt="Not found">
     <br>
     <h2>Why Paulownia?</h2>
     <ul>
@@ -25,7 +26,7 @@
         Today the price for 1 cubic meter of Paulownia wood ranges from $250 to $700, depending on its age, tickness of section
         and degree of processing. With proper care after 7 years, you can get 240-350 m3 quality wood from 1 hectare.
         </p>
-
+        <h4>For more informations visit:<a href="http://paulowniadevelopment.ro/en/"> Paulownia Development</a> </h4>
         <a href="myStory.html"> Homepage</a>   
 </body>
 <p>
