--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
               <div class="tm-section-wrap">
                 <section id="intro" class="tm-section">
                     <div class="tm-bg-white-transparent tm-intro">
-                        <h2 class="tm-section-title mb-5 text-uppercase tm-color-primary">Let me introduce myself</h2>
+                        <h2 class="tm-section-title mb-5 text-uppercase tm-color-primary"><b>Let me introduce myself</b></h2>
                         <p class="tm-color-gray">
-                          Hello there! <br >My name is Stelica D Paval I am a MSD student at Maharishi International University.
-                          
+                          <b>Hello there! <br >My name is Stelica D Paval I am a MSD student at Maharishi International University.
+                          </b>
                         </p>
                         <p class="mb-0 tm-color-gray">
-                          This is my student page where I have all my assignments. You are welcome to take a look and let me know if you have any questions &#128522;
+                         <b> This is my student page where I have all my assignments. You are welcome to take a look and let me know if you have any questions &#128522; </b>
                         </p>
                     </div>              
                 </section>
