--- a/CS315/w1d1Homework/myStory.html
+++ b/CS315/w1d1Homework/myStory.html
@@ -64,7 +64,7 @@
         <img style="border-style:none" width="88" height="31"
         src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" /></a>
         &nbsp;&nbsp;
-        <a href="http://jigsaw.w3.org/css-validator/check/referer"
+        <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://dorinpaval.github.io/CS315/w1d1Homework/myStory.html"
         style="background-color: transparent">
         <img style="border-style:none" width="88" height="31"
         src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" /></a>
