--- a/CS315/w1d1Homework/myStory.html
+++ b/CS315/w1d1Homework/myStory.html
@@ -59,7 +59,7 @@
     <a href="business.html"> Link to my business idea</a>
 
     <div>
-        <a href="http://validator.w3.org/check?uri=referer"
+        <a href="http://validator.w3.org/check?uri=https://dorinpaval.github.io/CS315/w1d1Homework/myStory.html"
         style="background-color: transparent">
         <img style="border-style:none" width="88" height="31"
         src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" /></a>
