--- a/CS315/w1d1Homework/myStory.html
+++ b/CS315/w1d1Homework/myStory.html
@@ -50,14 +50,14 @@
      <div>
          <h2>My main moods</h2>
          <table>
-             <th>Happy</th> 
+             <th>Happy</th>
              <td><img src="../../img/happy.jpg" alt="happyMood" width="200" height="250"></td>
              <th>Sad</th> 
              <td> <img src="../../img/sad.jpg" alt="sadMood" width="200" height="250"></td>
          </table>
-     </div>
-    <a href="business.html"> Link to my business idea</a>
-
+         <br>
+    <button><a href="business.html" class="hyperlink-underline"> <b>Link to my business idea</b></a> </button>
+         <br> <br>
     <div>
         <a href="http://validator.w3.org/check?uri=https://dorinpaval.github.io/CS315/w1d1Homework/myStory.html"
         style="background-color: transparent">
