--- a/CS315/w1d3DOM.html
+++ b/CS315/w1d3DOM.html
@@ -13,6 +13,14 @@
     <textarea id="output"></textarea>
     <br>
     <button id="buttonId">Click to add</button>
+
+    <ul id="unList">
+        <li>One</li>
+    </ul>
+    <button id="button1" onclick="addRow()"> Add </button>
+    <button id= "button2" onclick="removeRow()">Remove</button>
     <script src="functions.js"></script>
+
+
 </body>
 </html>
