--- a/CS315.html
+++ b/CS315.html
@@ -9,6 +9,7 @@
 	<ol>
 		<li><a target="_blank" href="CS315/w1d1Homework/myStory.html">About me and my business idea</a> &rarr; w1d1Homework</li>
 		<li><a target="_blank" href="CS315/w1d3Homework/index.html">Add text, Calculator and Inventory app</a> &rarr; w1d3Homework</li>
+		<li><a target="_blank" href="CS315/w2d6Homework/index.html">Example Blog Page</a> &rarr; w2d6Homework</li>
 		<!--<li><a target="_blank" href="CS305/d14arrays/index.html"><strong>Arrays </strong></a></li>
 		<li><a target="_blank" href="CS305/w1d5Homework/index.html"><strong>Function expressions </strong> </a></li>
 		<li><a target="_blank" href="CS305/w2d1Homework/index.html"><strong>Objects</strong> </a></li>
