--- a/CS315.html
+++ b/CS315.html
@@ -10,6 +10,10 @@
 		<li><a target="_blank" href="CS315/w1d1Homework/myStory.html">About me and my business idea</a> &rarr; w1d1Homework</li>
 		<li><a target="_blank" href="CS315/w1d3Homework/index.html">Add text, Calculator and Inventory app</a> &rarr; w1d3Homework</li>
 		<li><a target="_blank" href="CS315/w2d6Homework/index.html">Example Blog Page</a> &rarr; w2d6Homework</li>
+		<li><a target="_blank" href="CS315/w3d1Homework/nestedFlex.html">CSS - Flexbox</a> &rarr; w3d1Homework</li>
+		<li><a target="_blank" href="CS315/w3d2Homework/grid.html">CSS - Grid</a> &rarr; w3d2Homework</li>
+		<li><a target="_blank" href="CS315/w3d3Homework/form.html">CSS - Bootstrap </a> &rarr; w3d3Homework</li>
+		<li><a target="_blank" href="CS315/w3d4Homework/form.html">CSS - Bootstrap Form</a> &rarr; w3d4Homework</li>
 		<!--<li><a target="_blank" href="CS305/d14arrays/index.html"><strong>Arrays </strong></a></li>
 		<li><a target="_blank" href="CS305/w1d5Homework/index.html"><strong>Function expressions </strong> </a></li>
 		<li><a target="_blank" href="CS305/w2d1Homework/index.html"><strong>Objects</strong> </a></li>
