--- a/CS315/w1d3DOM.html
+++ b/CS315/w1d3DOM.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+ <!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -22,5 +22,55 @@
     <script src="functions.js"></script>
 
 
+</body>
+</html> -->
+
+
+
+
+<!DOCTYPE HTML>
+<html lang="en-us">
+<head>
+    <meta charset="utf-8">
+    <title>About Me</title>
+    <link rel="stylesheet" href="styleme.css">
+</head>
+<body>
+        <h1>About Me</h1>
+        <p>My name is <b>Ngoc Tam Nguyen</b>. I am student of <b>MSD</b>.</p>
+        <hr>
+        <h3>My classes This Quarter</h3>
+        <ul>
+            <li>CS 305 - Oriented Programming in JavaScript</li>
+            <li>CS 315 - Web Application in JavaScript</li>
+            <li>CS 445 - Modern Asynchronous Programming</li>
+            <li>CS 415 - Relational and Document - Base Database</li>
+        </ul>
+        <h3>My Favorite movies</h3>
+        <p><i>(I actually don't watch too many movies, so...here goes!)</i></p>
+        <ol>
+            <li>Lion King (<a href="https://www.imdb.com/title/tt0110357/?ref_=fn_al_tt_1/">IMDP</a>)</li>
+            <li>Star Trek Episode V with Zazu (<a href="http://www.imdb.com/title/tt0098382/">IMDP</a>)</li>
+            <li>Emperor (<a href="https://www.imdb.com/title/tt2103264/">IMDP</a>)</li>
+        </ol>
+        <h3>My Moods</h3>
+        <h6>Happy:<img src="./images/Happy.jpg" alt="Happy face" width="300" height="200">   Sad: <img src="./images/sad.jpg" alt="sad face" width="300" height="200"></h6>
+        <h3>Fun Facts About My Neighbors</h3>
+        <ul>
+            <li>Sue Smith: <i>Effervescent</i> is a word that describes her</li>
+            <li>Bill Thompson: Loves playing <i>Yu-Gi-Oh</i></li>
+        </ul>
+    <!-- Validation -->
+    <div>
+        <a href="https://validator.w3.org/nu/?doc=<https://github.com/ngoctamnguyen/CS315/blob/main/aboutme.html>"
+        style="background-color: transparent">
+        <img style="border-style:none" width="88" height="31"
+        src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" /></a>
+        &nbsp;&nbsp;
+        <a href="http://jigsaw.w3.org/css-validator/check/referer"
+        style="background-color: transparent">
+        <img style="border-style:none" width="88" height="31"
+        src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" /></a>
+    </div>
 </body>
 </html>
