--- a/CS315/w1d3Homework/inventory.html
+++ b/CS315/w1d3Homework/inventory.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CS315/w1d3Homework/inventory.css">
+    <link rel="stylesheet" href="inventory.css">
     <title>Document</title>
     <link rel="stylesheet" href="inventory.css">
     <script src="inventory.js"></script>
