--- a/CS445.html
+++ b/CS445.html
@@ -3,17 +3,17 @@
 	<title>CS315 labs</title>
 </head>
 <body>
-	<h1>CS315 Web Application Programming in JavaScript</h1>
+	<h1>CS445 Modern Asynchronous Programming</h1>
 	<h2>Labs</h2>
-	<h3>April 2022</h3>
+	<h3>May 2022</h3>
 	<ol>
 		<li><a target="_blank" href="CS315/w1d1Homework/myStory.html">About me and my business idea</a> &rarr; w1d1Homework</li>
-		<li><a target="_blank" href="CS315/w1d3Homework/index.html">Add text, Calculator and Inventory app</a> &rarr; w1d3Homework</li>
+		<!-- <li><a target="_blank" href="CS315/w1d3Homework/index.html">Add text, Calculator and Inventory app</a> &rarr; w1d3Homework</li>
 		<li><a target="_blank" href="CS315/w2d6Homework/index.html">Example Blog Page</a> &rarr; w2d6Homework</li>
 		<li><a target="_blank" href="CS315/w3d1Homework/nestedFlex.html">CSS - Flexbox</a> &rarr; w3d1Homework</li>
 		<li><a target="_blank" href="CS315/w3d2Homework/grid.html">CSS - Grid</a> &rarr; w3d2Homework</li>
 		<li><a target="_blank" href="CS315/w3d3Homework/bootstrap.html">CSS - Bootstrap </a> &rarr; w3d3Homework</li>
-		<li><a target="_blank" href="CS315/w3d4Homework/form.html">CSS - Bootstrap Form</a> &rarr; w3d4Homework</li>
+		<li><a target="_blank" href="CS315/w3d4Homework/form.html">CSS - Bootstrap Form</a> &rarr; w3d4Homework</li> -->
 	</ol>
 </body>
 </html>
