--- a/CS445.html
+++ b/CS445.html
@@ -8,6 +8,7 @@
 	<h3>May 2022</h3>
 	<ol>
 		<li><a target="_blank" href="CS445/w2d5DOM/index.html">Calculator and Swap Pictures</a> &rarr; w2d5Homework</li>
+		<li><a target="_blank" href="CS445/w3d3Fetch/index.html">Employees List</a> &rarr; w3d3Homework</li>
 	</ol>
 </body>
 </html>
