--- a/CS445.html
+++ b/CS445.html
@@ -9,6 +9,7 @@
 	<ol>
 		<li><a target="_blank" href="CS445/w2d5DOM/index.html">Calculator and Swap Pictures</a> &rarr; w2d5Homework</li>
 		<li><a target="_blank" href="CS445/w3d3Fetch/index.html">Employees List</a> &rarr; w3d3Homework</li>
+		<li><a target="_blank" href="CS445/w3d5Observables/index.html">Employees List with Observables</a> &rarr; w3d5Homework</li>
 	</ol>
 </body>
 </html>
